<resources>
    <string name="app_name">Primavera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">OTP Verification</string>
    <string name="message_verification">You will receive verification code on this mobile number</string>
    <string name="phone">Enter your phone number</string>
    <string name="code">+2-</string>
    <string name="phone_hint">0123456789</string>
    <string name="otp_get">Get Code</string>
    <string name="verification_code">Enter verification code</string>
    <string name="resend_code">Didn\'t receive the verification code?</string>
    <string name="resend_otp">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="father">Father</string>
    <string name="teacher">Teacher</string>
    <string name="fragment">Fragment</string>
    <string name="information">Please Enter Your Information</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="child_information">Please Enter Your Child Information</string>
    <string name="child_watch">Select Your Child  Watch</string>
    <string name="turn_on">Turn On</string>
    <string name="search">Search</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="age">Age</string>
    <string name="academic">Academic Year</string>
    <string name="set_data">Set Data</string>
    <string name="first_primary">First Primary</string>
    <string name="second_primary">Second Primary</string>
    <string name="third_primary">Third Primary</string>
    <string name="fourth_primary">Fourth Primary</string>
    <string name="fifth_primary">Fifth Primary</string>
    <string name="sixth_primary">Sixth Primary</string>
    <string name="first_preparatory">First Preparatory</string>
    <string name="second_preparatory">Second Preparatory</string>
    <string name="third_preparatory">Third Preparatory</string>
    <string name="first_secondary">First Secondary</string>
    <string name="second_secondary">Second Secondary</string>
    <string name="third_secondary">Third Secondary</string>
    <string name="english">English</string>
    <string name="biology">Biology</string>
    <string name="chemistry">Chemistry</string>
    <string name="mathematics">Mathematics</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="physics">Physics</string>
    <string name="geology">Geology</string>
    <string name="philosophy">Philosophy</string>
    <string name="german">German</string>
    <string name="history">History</string>
    <string name="science">Science</string>
    <string name="geography">Geography</string>
    <string-array name="academic_years_array">
        <item>None</item>
        <item>First Primary</item>
        <item>Second Primary</item>
        <item>Third Primary</item>
        <item>Fourth Primary</item>
        <item>Fifth Primary</item>
        <item>Sixth Primary</item>
        <item>First Preparatory</item>
        <item>Second Preparatory</item>
        <item>Third Preparatory</item>
        <item>First Secondary</item>
        <item>Second Secondary</item>
        <item>Third Secondary</item>
    </string-array>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="my_selected_location">My Selected Location</string>
    <string name="google_maps_key">AIzaSyA5LoRYl8SLrSDgyHuDiJvDmLbxPmSdeZo</string>
    <string name="my_location">My Location</string>
    <string name="send_message"><![CDATA[Send Message -->]]></string>
    <string name="profile">Profile</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="voice_message">voiceMessage</string>
    <string name="text_message">textMessage</string>
    <string name="send_voice">sendVoice</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="conversations">Conversations</string>
    <string name="log_out">Log out</string>
    <string name="switch_to_father_account">Switch To Father Account</string>
    <string name="no_data">No Data</string>
    <string name="child_chat">Child Chat</string>
    <string name="still_working">Still Working</string>
    <string name="play_sender">playSender</string>
    <string name="pause_sender">pauseSender</string>
    <string name="play_receiver">playReceiver</string>
    <string name="pause_receiver">pauseReceiver</string>
    <string name="accessibility_service_label">accessibility_service_label</string>
    <string name="subjects">Subjects</string>
    <string name="academics">Academic Years</string>
    <string name="phones">Phone</string>
    <string name="location">Location</string>
    <string name="rate">Rate</string>
    <string name="show_on_map">Show On Map</string>
    <string name="teacher_location">Teacher Location</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_chat">Back To Chat</string>
    <string name="children">Children</string>
    <string name="save">Save</string>
    <string name="father_location">Father Location</string>
    <string name="child_info">Child Information</string>
    <string name="child_academic_year">Child Academic Year</string>
    <string name="watch">Watch</string>
    <string name="academic_year">Academic Year</string>
    <string name="child">New Child</string>
    <string name="father_name">Father Name</string>
    <string name="father_info">Show Father Information</string>
    <string name="samsung_watch">Samsung Watch</string>
    <string name="select_your_academic_subjects">Select Your Academic Subjects</string>
    <string name="select_your_academic_years">Select Your Academic Years</string>
    <string name="show_amp_update"><![CDATA[Show & Update]]></string>
    <string name="father_information">Father Information</string>
    <string name="select_location">Select Location</string>
    <string name="otp_otp">OTP</string>
    <string name="info">Information</string>
    <string name="teacher_information">Teacher Information</string>
    <string name="ali">Ali</string>
    <string name="close">Close</string>
    <string name="open_app">Open App</string>
    <string name="danger">Danger</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="oxygen_level">Oxygen Level</string>
    <string name="today_steps">Today Steps</string>
    <string name="steps">Steps</string>

</resources>