<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.m391.primavera.authentication.information.teacher.TeacherInformationViewModel" />

        <variable
            name="createViewModel"
            type="com.m391.primavera.user.father.home.switjha.teacher.CreateTeacherViewModel" />

        <variable
            name="teacherViewModel"
            type="com.m391.primavera.user.teacher.home.switjha.profile.TeacherEditProfileViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".authentication.information.teacher.SelectYearsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginEnd="@dimen/margin_20"
            android:orientation="horizontal"
            android:padding="@dimen/padding_5">

            <ImageButton
                android:id="@+id/arrow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start|center"
                android:background="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription,UnusedAttribute,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/academics"
                android:textColor="#E34234"
                android:textSize="@dimen/font_size_20"
                android:textStyle="italic|bold"
                android:visibility="visible"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_20"
            android:layout_marginEnd="@dimen/padding_20"
            android:background="@drawable/table_border"
            android:padding="@dimen/padding_5"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_5"
                android:background="@drawable/row_border"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/first_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/first_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/second_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/second_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/third_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/third_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/fourth_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/fourth_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/fifth_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/fifth_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/sixth_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/sixth_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/first_preparatory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/first_preparatory"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/second_preparatory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/second_preparatory"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/third_preparatory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/third_preparatory"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/first_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/first_secondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/second_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/second_secondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />

                <CheckBox
                    android:id="@+id/third_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="18dp"
                    android:text="@string/third_secondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:background="@color/topBack" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>